whitespace issues

--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 html {
   background-color:#000;
 }
-section {
+.section,
+.footer {
   background-color:transparent !important;
 }
+.section {
+  padding: 0 3em;
+}
+.footer {
+  padding-top: 0;
+}
 .container {
-  border: 2px solid white;
+  padding: 3em 0;
+  border-left: 2px solid white;
+  border-right: 2px solid white;
   background-color:rgba(0,0,0,0.5);
 }
 .title, .subtitle {
